crates/formatter/tests/snapshots/snapshots__migrations__000525_chat_context_resources.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- The workspace_agent_context_* enum types are owned by migration
-- 000522 and are still in use by workspace_agent_context_resources, so
-- they are intentionally left in place here.
drop table if exists chat_context_resources;
