crates/formatter/tests/snapshots/snapshots__migrations__000525_chat_context_resources.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Creates chat_context_resources: a per-chat pinned copy of
-- workspace_agent_context_resources (semantics in COMMENT ON TABLE
-- below). Migration-specific notes: there is deliberately no FK to
-- workspace_agents so the pin survives agent replacement and workspace
-- rebuilds, and the body_kind/status enum types are reused from 000522
-- and must not be recreated here.
create table chat_context_resources (
	chat_id uuid not null references chats (id) on delete cascade,
	source text not null,
	body_kind workspace_agent_context_body_kind not null,
	body jsonb not null,
	content_hash bytea not null,
	size_bytes bigint not null,
	status workspace_agent_context_resource_status not null,
	error text not null default '',
	source_path text not null default '',
	created_at timestamptz not null default now(),
	updated_at timestamptz not null default now(),
	primary key (chat_id, source)
);

comment on table chat_context_resources is 'Per-chat pinned copy of the agent context resources a chat is hydrated against. Copied from workspace_agent_context_resources at chat hydration and context refresh; survives agent replacement and workspace rebuilds.';
comment on column chat_context_resources.source is 'Resource locator: canonical file path for file-backed kinds, or the MCP server name for mcp_server resources.';
comment on column chat_context_resources.body_kind is 'Discriminator for the body JSON shape. Matches the proto oneof variant: instruction_file, skill, mcp_config, mcp_server. PLUGIN/HOOK/SUBAGENT/COMMAND are reserved for the Claude Code plugin RFC.';
comment on column chat_context_resources.body is 'protojson-encoded variant body matching body_kind. Always populated; non-OK statuses use the variant zero value so the wire kind is still attributable.';
comment on column chat_context_resources.content_hash is 'sha256 over the resource''s original bytes (or transport-encoded server tool list).';
comment on column chat_context_resources.size_bytes is 'Original payload size in bytes; populated regardless of status.';
comment on column chat_context_resources.status is 'Per-resource status. ok carries a populated body; oversize, unreadable, invalid, and excluded carry an empty body plus an error string.';
comment on column chat_context_resources.error is 'Per-resource error or warning string. Populated whenever status is non-ok; may also carry a non-fatal warning when status is ok.';
comment on column chat_context_resources.source_path is 'User-declared scan root that produced this resource. Empty for built-in scan roots.';
