crates/formatter/tests/snapshots/snapshots__migrations__000527_dormancy_notification_use_til_delete.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Revert to the body left by migration 000518
-- (000311's wording with the corrected docs URL).
update notification_templates
set
	body_template = E'Your workspace **{{.Labels.name}}** has been marked as [**dormant**](https://coder.com/docs/admin/templates/managing-templates/schedule#dormancy-threshold) due to inactivity exceeding the dormancy threshold.\n\n'
	|| E'This workspace will be automatically deleted in {{.Labels.timeTilDormant}} if it remains inactive.\n\n'
	|| E'To prevent deletion, activate your workspace using the link below.'
where id = '0ea69165-ec14-4314-91f1-69566ac3c5a0';
