crates/formatter/tests/snapshots/snapshots__migrations__000530_relay_host_nats_port.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table replicas drop column nats_port;
alter table replicas drop column cluster_host;
